--- a/pointinpolygon-test/amap.html
+++ b/pointinpolygon-test/amap.html
@@ -11,6 +11,29 @@
     <script src="http://cache.amap.com/lbs/static/es5.min.js"></script>
     <script type="text/javascript" src="http://webapi.amap.com/maps?v=1.3&key=您申请的key值&plugin=AMap.ToolBar"></script>
     <script>
+        var polygons = [
+/*A*/"113.66593,34.799582,113.647939,34.799622,113.647965,34.796807,113.650984,34.79228,113.654122,34.787687,113.654266,34.787367,113.658391,34.78725,113.65834,34.766829,113.659712,34.766828,113.659708,34.764333,113.672206,34.764359,113.682042,34.763768,113.682041,34.782406,113.681675,34.78649,113.681637,34.79693",
+/*B*/"113.706689,34.79212,113.708363,34.780204,113.709072,34.777859,113.709726,34.776545,113.708822,34.775438,113.708405,34.774643,113.70732,34.771718,113.705881,34.767636,113.704629,34.763145,113.711917,34.762512,113.7207,34.762319,113.725214,34.762778,113.732816,34.761025,113.73461,34.760696,113.736577,34.760806,113.776096,34.770673,113.776114,34.785759,113.771369,34.788477,113.752855,34.785634",
+/*B2*/"113.765453,34.768029,113.768852,34.760872,113.769458,34.757751,113.76894,34.755103,113.764548,34.736567,113.779281,34.736854,113.776096,34.770673",
+/*C*/"113.652419,34.764013,113.659708,34.764333,113.672206,34.764359,113.682042,34.763768,113.68205,34.739503,113.675738,34.739824,113.670607,34.74062,113.668727,34.740411,113.662985,34.738491,113.656223,34.737348,113.652107,34.747851,113.649457,34.7529,113.649531,34.75407,113.650578,34.758034,113.647644,34.761792",
+/*D*/"113.683139,34.796827,113.687779,34.795892,113.692607,34.795058,113.706689,34.79212,113.708363,34.780204,113.709072,34.777859,113.709726,34.776545,113.708822,34.775438,113.708405,34.774643,113.70732,34.771718,113.705881,34.767636,113.704629,34.763145,113.700194,34.763148,113.682042,34.763768,113.682041,34.782406,113.681675,34.78649,113.681637,34.79693",
+/*E*/"113.67926,34.846712,113.67846,34.836823,113.682137,34.82573,113.681737,34.819534,113.669759,34.819521,113.656838,34.819446,113.648487,34.819891,113.648603,34.827565,113.648977,34.829989,113.650571,34.839297,113.649269,34.844308,113.64906,34.847118",
+/*E2*/"113.642648,34.846802,113.64906,34.847118,113.649269,34.844308,113.650571,34.839297,113.648977,34.829989,113.648603,34.827565,113.648487,34.819891,113.639887,34.819944,113.630516,34.81964,113.625972,34.819327,113.619863,34.819446,113.619125,34.824264,113.619837,34.835342,113.611798,34.839762",
+/*EE*/"113.704034,34.746882,113.704036,34.761193,113.704629,34.763145,113.711917,34.762512,113.7207,34.762319,113.725214,34.762778,113.732816,34.761025,113.73461,34.760696,113.736577,34.760806,113.765453,34.768029,113.768852,34.760872,113.769458,34.757751,113.76894,34.755103,113.764548,34.736567,113.737242,34.736058,113.737279,34.737933,113.726265,34.73792,113.715055,34.737803,113.714997,34.740103,113.714169,34.740208,113.71423,34.741971,113.710974,34.74199,113.710954,34.746912",
+/*F*/"113.65713,34.728919,113.657122,34.720408,113.657155,34.683911,113.628476,34.691763,113.628691,34.699916,113.617813,34.702921,113.611892,34.710199,113.589498,34.728885",
+/*H*/"113.627563,34.813398,113.625985,34.816696,113.625972,34.819327,113.619863,34.819446,113.619125,34.824264,113.619837,34.835342,113.611798,34.839762,113.597631,34.836678,113.601262,34.823923,113.59468,34.814338,113.597603,34.801563,113.598788,34.795305,113.59591,34.788671,113.591928,34.772717,113.586108,34.763146,113.585902,34.759947,113.603322,34.756776,113.628614,34.754616,113.637484,34.753913,113.649531,34.75407,113.650578,34.758034,113.647644,34.761792,113.652419,34.764013,113.659708,34.764333,113.659708,34.764333,113.659712,34.766828,113.65834,34.766829,113.658391,34.78725,113.654266,34.787367,113.654122,34.787687,113.650984,34.79228,113.647965,34.796807,113.647939,34.799622,113.644908,34.799599,113.639001,34.79701",
+/*I*/"113.702133,34.809124,113.692935,34.834505,113.692233,34.838016,113.692171,34.846386,113.67926,34.846712,113.67846,34.836823,113.682137,34.82573,113.681737,34.819534,113.681299,34.815141,113.681419,34.809726",
+/*I2*/"113.681637,34.79693,113.683139,34.796827,113.687779,34.795892,113.692607,34.795058,113.706689,34.79212,113.705575,34.7996,113.702133,34.809124,113.681419,34.809726",
+/*K*/"113.681242,34.720492,113.681212,34.7194,113.681633,34.718555,113.690347,34.711276,113.693235,34.707279,113.691985,34.70671,113.691067,34.70582,113.689633,34.703422,113.690936,34.699026,113.70195,34.701384,113.706483,34.701483,113.704021,34.696678,113.726536,34.676275,113.744093,34.680389,113.759802,34.685799,113.736203,34.701798,113.733053,34.705094,113.7275,34.715374,113.726007,34.723658,113.712688,34.732728,113.711666,34.733131,113.704226,34.732994,113.69035,34.73314,113.690428,34.72084,113.687466,34.720833",
+/*K2*/"113.784856,34.736989,113.785073,34.732941,113.777522,34.704589,113.74873,34.703865,113.744162,34.703255,113.736203,34.701798,113.733053,34.705094,113.7275,34.715374,113.726007,34.723658,113.726265,34.73792,113.737279,34.737933,113.737242,34.736058,113.764548,34.736567",
+/*M*/"113.58463,34.732858,113.584525,34.753678,113.585793,34.756548,113.585902,34.759947,113.603322,34.756776,113.628614,34.754616,113.637484,34.753913,113.649531,34.75407,113.649457,34.7529,113.652107,34.747851,113.656223,34.737348,113.657225,34.735223,113.65713,34.728919,113.589498,34.728885",
+/*N*/"113.681637,34.79693,113.66593,34.799582,113.647939,34.799622,113.647939,34.799622,113.644908,34.799599,113.639001,34.79701,113.627563,34.813398,113.630014,34.813497,113.637958,34.81171,113.643542,34.810709,113.681419,34.809726",
+/*N2*/"113.681299,34.815141,113.681737,34.819534,113.669759,34.819521,113.656838,34.819446,113.648487,34.819891,113.639887,34.819944,113.630516,34.81964,113.625972,34.819327,113.625985,34.816696,113.627563,34.813398,113.630014,34.813497,113.637958,34.81171,113.643542,34.810709,113.681419,34.809726",
+/*U*/"113.704034,34.746882,113.704036,34.761193,113.704629,34.763145,113.700194,34.763148,113.682042,34.763768,113.68205,34.739503,113.675738,34.739824,113.670607,34.74062,113.668727,34.740411,113.662985,34.738491,113.656223,34.737348,113.657225,34.735223,113.657122,34.720408,113.681242,34.720492,113.687466,34.720833,113.690428,34.72084,113.69035,34.73314,113.704226,34.732994,113.711666,34.733131,113.712688,34.732728,113.726007,34.723658,113.726372,34.73792,113.715055,34.737803,113.714997,34.740103,113.714169,34.740208,113.71423,34.741971,113.710974,34.74199,113.710954,34.746912",
+/*Y*/"113.657122,34.720408,113.681242,34.720492,113.681212,34.7194,113.681633,34.718555,113.690347,34.711276,113.693235,34.707279,113.691985,34.70671,113.691067,34.70582,113.689633,34.703422,113.690936,34.699026,113.682349,34.698984,113.682444,34.683446,113.657155,34.683911",
+/*高新区*/"113.57795,34.761197,113.573489,34.761012,113.555038,34.76206,113.522875,34.762077,113.501295,34.763263,113.503224,34.849786,113.54339,34.839041,113.580553,34.83631,113.597631,34.836678,113.601262,34.823923,113.59468,34.814338,113.597603,34.801563,113.598788,34.795305,113.59591,34.788671,113.591928,34.772717,113.586108,34.763146,113.585902,34.759947",
+        ];
+
         function init() {
             var map = new AMap.Map("container", {
                 resizeEnable: true,
@@ -23,13 +46,28 @@
                 document.getElementById("lnglat").value = e.lnglat.getLng() + ',' + e.lnglat.getLat()
             });
 
-            var polygon1 = (function () {
-                var arr = [ //构建多边形经纬度坐标数组
-                    [113.612361, 34.809969],
-                    [113.639581, 34.770364],
-                    [113.710471, 34.775082],
-                    [113.701196, 34.809484]
-                ]
+            var createMarker = function (i, position) {
+                return new AMap.Marker({
+                    map: map,
+                    position: position,
+                    label: { content: i + "：" + position, offset: new AMap.Pixel(2, -22) }
+                })
+            }
+
+            var convertPath = function (p) {
+                if (p) {
+                    var pathArr = [];
+                    for (var i = 0; i < p.split(',').length; i = i + 2) {
+                        var position = new Array(p.split(',')[i], p.split(',')[i + 1]);
+                        //createMarker(i/2, position);
+                        pathArr.push(position);
+                    }
+                    return pathArr;
+                }
+                return "";
+            }
+
+            var createPolygon = function (arr) {
                 return new AMap.Polygon({
                     map: map,
                     path: arr,
@@ -39,70 +77,60 @@
                     fillColor: "#FF6600",
                     fillOpacity: 0.35
                 });
+            };
+
+            var createPolygons = (function () {
+                for (var i in polygons) {
+                    createPolygon(convertPath(polygons[i]));
+                }
             })();
 
-            var polygon2 = (function () {
-                var arr = [ //构建多边形经纬度坐标数组
-                    [113.705058, 34.808841],
-                    [113.728968, 34.762533],
-                    [113.682153, 34.739195],
-                    [113.784628, 34.736579],
-                    [113.756814, 34.78411]
-                ]
-                return new AMap.Polygon({
-                    map: map,
-                    path: arr,
-                    strokeColor: "#0099FF",
-                    strokeOpacity: 1,
-                    strokeWeight: 2,
-                    fillColor: "#FF6600",
-                    fillOpacity: 0.35
-                });
-            })();
-
-            markerA = new AMap.Marker({
-                map: map,
-                position: [113.612361, 34.809969],
-                label: { content: "A", offset: new AMap.Pixel(2, -22) }
-            })
-            markerB = new AMap.Marker({
-                map: map,
-                position: [113.710471, 34.775082],
-                label: { content: "B", offset: new AMap.Pixel(2, -22) }
-            })
-            markerC = new AMap.Marker({
-                map: map,
-                position: [113.705058, 34.808841],
-                label: { content: "C", offset: new AMap.Pixel(2, -22) }
-            })
-            markerD = new AMap.Marker({
-                map: map,
-                position: [113.682153, 34.739195],
-                label: { content: "D", offset: new AMap.Pixel(2, -22) }
-            })
-            markerE = new AMap.Marker({
-                map: map,
-                position: [113.756814, 34.78411],
-                label: { content: "E", offset: new AMap.Pixel(2, -22) }
-            })
-            markerF = new AMap.Marker({
-                map: map,
-                position: [113.720639, 34.770524],
-                label: { content: "F", offset: new AMap.Pixel(2, -22) }
-            })
-            markerG = new AMap.Marker({
-                map: map,
-                position: [113.672282, 34.787513],
-                label: { content: "G", offset: new AMap.Pixel(2, -22) }
-            })
-            markerH = new AMap.Marker({
-                map: map,
-                position: [113.744637, 34.762767],
-                label: { content: "H", offset: new AMap.Pixel(2, -22) }
-            })
+            //markerA = new AMap.Marker({
+            //    map: map,
+            //    position: [113.612361, 34.809969],
+            //    label: { content: "A", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerB = new AMap.Marker({
+            //    map: map,
+            //    position: [113.710471, 34.775082],
+            //    label: { content: "B", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerC = new AMap.Marker({
+            //    map: map,
+            //    position: [113.705058, 34.808841],
+            //    label: { content: "C", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerD = new AMap.Marker({
+            //    map: map,
+            //    position: [113.682153, 34.739195],
+            //    label: { content: "D", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerE = new AMap.Marker({
+            //    map: map,
+            //    position: [113.756814, 34.78411],
+            //    label: { content: "E", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerF = new AMap.Marker({
+            //    map: map,
+            //    position: [113.720639, 34.770524],
+            //    label: { content: "F", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerG = new AMap.Marker({
+            //    map: map,
+            //    position: [113.672282, 34.787513],
+            //    label: { content: "G", offset: new AMap.Pixel(2, -22) }
+            //})
+            //markerH = new AMap.Marker({
+            //    map: map,
+            //    position: [113.744637, 34.762767],
+            //    label: { content: "H", offset: new AMap.Pixel(2, -22) }
+            //})
 
             map.setFitView();
         }
+
+
+        
 
     </script>
 </head>
